todas las fotos de los carruseles y el readme acabado

--- a/miportfolio/about.html
+++ b/miportfolio/about.html
@@ -18,8 +18,8 @@
     </nav>
   </header>
 
-<main>
-        <section class="about">
+<main class="intro-section">
+  <section class="about">
     <div class="about-text">
       <h3 class="about-title">About me</h3>
       <p>
@@ -32,11 +32,13 @@
         Design allows me to express ideas and connect with people in a visual way. I’m always curious to learn new tools, explore trends, and grow as a designer. Outside of design, I enjoy drawing, watching films, and discovering new music.
       </p>
       <p>Thanks for visiting my portfolio — I hope you enjoy my work!</p>
+      <a href="about.html" class="btn">View All Information</a>
     </div>
-    <div class="about-image">
-      <img src="./assets/images/mi foto.JPG" alt="Rocío profile photo" />
+
+  <div class="about-image">
+    <img src="./assets/images/mi foto.JPG" alt="Rocío profile photo" />
     </div>
-        </section>
+  </section>
 
         <section id="all-info" class="skills-section">
           <div class="container">
@@ -102,7 +104,6 @@
           <span class="dot filled"></span><span class="dot filled"></span><span class="dot filled"></span><span class="dot empty"></span><span class="dot empty"></span>
         </div>
       </div>
-
     <h3 class="about-title">Experience</h3>
       <p><a href="./assets/files/CV_RocioConsuegra.pdf" download>Download CV</a></p>
     </div>
