--- a/miportfolio/heavenstudio.html
+++ b/miportfolio/heavenstudio.html
@@ -24,12 +24,20 @@
      <div class="carousel">
     <div class="slides">
       <!-- Repetimos las imágenes para simular el bucle infinito -->
-      <div class="slide"><img src="assets/images//DELANTE TODAS.PNG" alt="Imagen 1"></div>
-      <div class="slide"><img src="assets/images/TRASERA TODAS.png" alt="Imagen 2"></div>
+      <div class="slide"><img src="assets/images/heaven.PNG" alt="Imagen 1"></div>
+      <div class="slide"><img src="assets/images/carpeta azul morado.png" alt="Imagen 2"></div>
+      <div class="slide"><img src="assets/images/papeleria.PNG" alt="Imagen 3"></div>
+      <div class="slide"><img src="assets/images//taza logo rojo.png" alt="Imagen 4"></div>
+      <div class="slide"><img src="assets/images/todo merchan.PNG" alt="Imagen 5"></div>
+      <div class="slide"><img src="assets/images/folleto.PNG" alt="Imagen 6"></div>
 
       <!-- Duplicadas para la animación infinita -->
-      <div class="slide"><img src="assets/images//DELANTE TODAS.PNG" alt="Imagen 1 repetida"></div>
-      <div class="slide"><img src="assets/images//DELANTE TODAS.PNG" alt="Imagen 2 repetida"></div>
+      <div class="slide"><img src="assets/images/heaven.PNG" alt="Imagen 1 repetida"></div>
+      <div class="slide"><img src="assets/images/carpeta azul morado.png" alt="Imagen 2 repetida"></div>
+      <div class="slide"><img src="assets/images/papeleria.PNG" alt="Imagen 3 repetida"></div>
+      <div class="slide"><img src="assets/images//taza logo rojo.png" alt="Imagen 4 repetida"></div>
+      <div class="slide"><img src="assets/images/todo merchan.PNG" alt="Imagen 5 repetida"></div>
+      <div class="slide"><img src="assets/images/folleto.PNG" alt="Imagen 6 repetida"></div>
     </div>
     </div>
 
