--- a/miportfolio/magma.html
+++ b/miportfolio/magma.html
@@ -24,12 +24,12 @@
     <div class="carousel">
     <div class="slides">
       <!-- Repetimos las imágenes para simular el bucle infinito -->
-      <div class="slide"><img src="assets/images//DELANTE TODAS.PNG" alt="Imagen 1"></div>
-      <div class="slide"><img src="assets/images/TRASERA TODAS.png" alt="Imagen 2"></div>
+      <div class="slide"><img src="assets/images/tipography.png" alt="Imagen 1"></div>
+      <div class="slide"><img src="assets/images/tipography.png" alt="Imagen 2"></div>
 
       <!-- Duplicadas para la animación infinita -->
-      <div class="slide"><img src="assets/images//DELANTE TODAS.PNG" alt="Imagen 1 repetida"></div>
-      <div class="slide"><img src="assets/images//DELANTE TODAS.PNG" alt="Imagen 2 repetida"></div>
+      <div class="slide"><img src="assets/images/tipography.png" alt="Imagen 1 repetida"></div>
+      <div class="slide"><img src="assets/images/tipography.png" alt="Imagen 2 repetida"></div>
     </div>
     </div>
 
