--- a/miportfolio/works.html
+++ b/miportfolio/works.html
@@ -71,13 +71,6 @@
                 <h4>Heaven Studio</h4>
             </div>
             </a>
-            <a href="casatarradellas.html" class="work-link">
-            <div class="work-card">
-                <img src="img/tarraf.jpg" alt="Casa Tarradellas Rebranding">
-                <p class="category">Branding</p>
-                <h4>Casa Tarradellas Rebranding</h4>
-            </div>
-            </a>
             <a href="uditapp.html" class="work-link">
              <div class="work-card">
                 <img src="./assets/images/uditapp.JPG" alt="Udit App">
@@ -106,7 +99,7 @@
                 <h4>Spicy Socks</h4>
             </div>
             </a>
-            <a href="brota.html" class="work-link">
+            <a href="brotaapp.html" class="work-link">
             <div class="work-card">
                 <img src="./assets/images/brota3.PNG" alt="Brota App">
                 <p class="category">Interactive Design</p>
