--- a/miportfolio/bookcovers.html
+++ b/miportfolio/bookcovers.html
@@ -25,11 +25,17 @@
     <div class="slides">
       <!-- Repetimos las imágenes para simular el bucle infinito -->
       <div class="slide"><img src="assets/images/bookcover.PNG" alt="Imagen 1"></div>
-      <div class="slide"><img src="assets/images/TRASERA TODAS.png" alt="Imagen 2"></div>
+      <div class="slide"><img src="assets/images/libro 1.png" alt="Imagen 2"></div>
+      <div class="slide"><img src="assets/images/libro2.png" alt="Imagen 2"></div>
+      <div class="slide"><img src="assets/images/libro3.png" alt="Imagen 2"></div>
+
 
       <!-- Duplicadas para la animación infinita -->
-      <div class="slide"><img src="assets/images/DELANTE TODAS.PNG" alt="Imagen 1 repetida"></div>
-      <div class="slide"><img src="assets/images/TRASERA TODAS.png" alt="Imagen 2 repetida"></div>
+      <div class="slide"><img src="assets/images/bookcover.PNG" alt="Imagen 1"></div>
+      <div class="slide"><img src="assets/images/libro 1.png" alt="Imagen 2"></div>
+      <div class="slide"><img src="assets/images/libro2.png" alt="Imagen 2"></div>
+      <div class="slide"><img src="assets/images/libro3.png" alt="Imagen 2"></div>
+
     </div>
     </div>
 
