--- a/miportfolio/foto.html
+++ b/miportfolio/foto.html
@@ -24,13 +24,16 @@
     <div class="carousel">
     <div class="slides">
       <!-- Repetimos las imágenes para simular el bucle infinito -->
-      <div class="slide"><img src="assets/images//DELANTE TODAS.PNG" alt="Imagen 1"></div>
-      <div class="slide"><img src="assets/images/TRASERA TODAS.png" alt="Imagen 2"></div>
+      <div class="slide"><img src="assets/images/_MG_0040.PNG" alt="Imagen 1"></div>
+      <div class="slide"><img src="assets/images/_MG_0094.PNG" alt="Imagen 2"></div>
+      <div class="slide"><img src="assets/images/_MG_0100.PNG" alt="Imagen 3"></div>
+      <div class="slide"><img src="assets/images/_MG_0103.PNG" alt="Imagen 4"></div>
 
       <!-- Duplicadas para la animación infinita -->
-      <div class="slide"><img src="assets/images//DELANTE TODAS.PNG" alt="Imagen 1 repetida"></div>
-      <div class="slide"><img src="assets/images//DELANTE TODAS.PNG" alt="Imagen 2 repetida"></div>
-    </div>
+      <div class="slide"><img src="assets/images/_MG_0040.PNG" alt="Imagen 1 repetida"></div>
+      <div class="slide"><img src="assets/images/_MG_0094.PNG" alt="Imagen 2 repetida"></div>
+      <div class="slide"><img src="assets/images/_MG_0100.PNG" alt="Imagen 3 repetida"></div>
+      <div class="slide"><img src="assets/images/_MG_0103.PNG" alt="Imagen 4 repetida"></div>
     </div>
 
     <section class="about">
