ya sale el favicon en todos los apartados

--- a/404.html
+++ b/404.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Error 404</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="./assets/files/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="./assets/files/favicon.svg"/>
+    <link rel="shortcut icon" href="./assets/files/favicon.ico"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/files/apple-touch-icon.png" />
+    <link rel="manifest" href="./assets/files/web-app-manifest-192x192.png" />
   <style>
     * {
       box-sizing: border-box;
