nuevos cambios en el favicon

--- a/miportfolio/index.html
+++ b/miportfolio/index.html
@@ -6,11 +6,11 @@
   <title>Rocío's Portfolio</title>
   <link rel="stylesheet" href="./css/styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Arizonia&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="./assets/files/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="./assets/files/favicon.svg"/>
-    <link rel="shortcut icon" href="./assets/files/favicon.ico"/>
-    <link rel="apple-touch-icon" sizes="180x180" href="./assets/files/apple-touch-icon.png" />
-    <link rel="manifest" href="./assets/files/web-app-manifest-192x192.png" />
+    <link rel="icon" type="image/png" href="assets/files/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="assets/files/favicon.svg"/>
+    <link rel="shortcut icon" href="assets/files/favicon.ico"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/files/apple-touch-icon.png" />
+    <link rel="manifest" href="assets/files/web-app-manifest-192x192.png" />
 </head>
 <body>
 
