cambios en readme, license, json y links en el index a workcards

--- a/miportfolio/index.html
+++ b/miportfolio/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rocío's Portfolio</title>
+  <meta name="description" content="Rocío Consuegra's Portfolio - Graphic Design Student" />
+  <link rel="license" href="LICENSE.txt" />
+  <meta name="author" content="Rocío Consuegra" />
   <link rel="stylesheet" href="./css/styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Arizonia&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="assets/files/favicon-96x96.png" sizes="96x96" />
@@ -56,40 +59,49 @@
     <section class="works-section">
       <h3 class="works-title">Recent Works</h3>
       <div class="works-grid">
-        <div class="work-card">
-          <img src="./assets/images/botellas delante.PNG" alt="Capricho Wine Brand">
-          <p class="category">Branding</p>
-          <h4>Capricho Wine Brand</h4>
-        </div>
-        <div class="work-card">
-          <img src="./assets/images/tipography.png" alt="Magma Poster">
-          <p class="category">Typography</p>
-          <h4>Magma Poster</h4>
-        </div>
-        <div class="work-card">
-          <img src="./assets/images/fanzine.JPG" alt="El precio de crecer">
-          <p class="category">Editorial Design</p>
-          <h4>El precio de crecer</h4>
-        </div>
-        <div class="work-card">
-          <img src="./assets/images/Double Poster PSD Mockup.png" alt="Lo que no se ve">
-          <p class="category">Psychology of Perception</p>
-          <h4>"Lo que no se ve" Campaign</h4>
-        </div>
-        <div class="work-card">
-          <img src="./assets/images/boss mode.PNG" alt="Soft Edge">
-          <p class="category">Photography</p>
-          <h4>Soft Edge</h4>
-        </div>
-        <div class="work-card">
-          <img src="./assets/images/marquesina.PNG" alt="Veranos de la Villa Poster">
-          <p class="category">Graphic Design</p>
-          <h4>"Veranos de la Villa" Poster</h4>
-        </div>
-      </div>
-      <div class="center-btn">
-        <a href="works.html" class="btn">View All</a>
-      </div>
+        <a href="capricho.html" class="work-link">
+            <div class="work-card">
+                <img src="./assets/images/botellas delante.PNG" alt="Capricho Wine Brand">
+                <p class="category">Branding</p>
+                <h4>Capricho Wine Brand</h4>
+            </div>
+            </a>
+            <a href="magma.html" class="work-link">
+            <div class="work-card">
+                <img src="./assets/images/tipography.png" alt="Magma Poster">
+                <p class="category">Typography</p>
+                 <h4>Magma Poster</h4>
+            </div>
+            </a>
+            <a href="fanzine.html" class="work-link">
+            <div class="work-card">
+                <img src="./assets/images/fanzine.JPG" alt="El precio de crecer">
+                <p class="category">Editorial Design</p>
+                <h4>El precio de crecer</h4>
+            </div>
+            </a>
+            <a href="psicologia.html" class="work-link">
+             <div class="work-card">
+                <img src="./assets/images/Double Poster PSD Mockup.png" alt="Lo que no se ve">
+                <p class="category">Psychology of Perception</p>
+                <h4>"Lo que no se ve" Campaign</h4>
+            </div>
+            </a>
+            <a href="foto.html" class="work-link">
+            <div class="work-card">
+                <img src="./assets/images/boss mode.PNG" alt="Soft Edge">
+                <p class="category">Photography</p>
+                <h4>Soft Edge</h4>
+            </div>
+            </a>
+            <a href="veranosvilla.html" class="work-link">
+            <div class="work-card">
+                <img src="./assets/images/marquesina.PNG" alt="Veranos de la Villa Poster">
+                <p class="category">Graphic Design</p>
+                <h4>"Veranos de la Villa" Poster</h4>
+            </div>
+            </a>
+            </div>
     </section>
   </main>
 
