--- a/miportfolio/index.html
+++ b/miportfolio/index.html
@@ -47,12 +47,12 @@
         Design allows me to express ideas and connect with people in a visual way. I’m always curious to learn new tools, explore trends, and grow as a designer. Outside of design, I enjoy drawing, watching films, and discovering new music.
       </p>
       <p>Thanks for visiting my portfolio — I hope you enjoy my work!</p>
-      <a href="about.html" class="btn">View All Information</a>
+      <div class="about-image">
+        <img src="./assets/images/mi foto.JPG" alt="Rocío profile photo" />
+      </div>
+      
     </div>
-
-  <div class="about-image">
-    <img src="./assets/images/mi foto.JPG" alt="Rocío profile photo" />
-    </div>
+    <a href="about.html" class="btn">View All Information</a>
   </section>
 
 
@@ -101,6 +101,7 @@
                 <h4>"Veranos de la Villa" Poster</h4>
             </div>
             </a>
+            <a href="works.html" class="btn">View All</a>
             </div>
     </section>
   </main>
