--- a/miportfolio/index.html
+++ b/miportfolio/index.html
@@ -52,7 +52,9 @@
       </div>
       
     </div>
-    <a href="about.html" class="btn">View All Information</a>
+    <div>
+       <a href="about.html" class="btn">View All Information</a>
+    </div>
   </section>
 
 
