--- a/miportfolio/about.html
+++ b/miportfolio/about.html
@@ -41,8 +41,9 @@
         <img src="./assets/images/mi foto.JPG" alt="Rocío profile photo" />
         </div>
     </div>
+    <div>
     <a href="about.html" class="btn">View All Information</a>
-
+    </div>
   </section>
 
         <section id="all-info" class="skills-section">
