--- a/miportfolio/index.html
+++ b/miportfolio/index.html
@@ -102,7 +102,9 @@
                 <h4>"Veranos de la Villa" Poster</h4>
                 </a>
             </div>
+            <div>
             <a href="works.html" class="btn">View All</a>
+            </div>
             </div>
 
     </section>
