arreglo foto fanzine

--- a/miportfolio/fanzine.html
+++ b/miportfolio/fanzine.html
@@ -30,11 +30,11 @@
     <div class="slides">
       <!-- Repetimos las imágenes para simular el bucle infinito -->
       <div class="slide"><img src="assets/images/fanzine.JPG" alt="Imagen 1"></div>
-      <div class="slide"><img src="assets/images/MOCKUP fanzine cerrado y abierto.jpg" alt="revista abierta y cerrada"></div>
+      <div class="slide"><img src="assets/images/MOCKUP fanzine cerrado y abierto.JPG" alt="revista abierta y cerrada"></div>
 
       <!-- Duplicadas para la animación infinita -->
       <div class="slide"><img src="assets/images/fanzine.JPG" alt="Imagen 1 repetida"></div>
-      <div class="slide"><img src="assets/images/MOCKUP fanzine cerrado y abierto.jpg" alt="Imagen 2 repetida"></div>
+      <div class="slide"><img src="assets/images/MOCKUP fanzine cerrado y abierto.JPG" alt="Imagen 2 repetida"></div>
     </div>
     </div>
 
