faltaba un div para que saliesen las fotos

--- a/miportfolio/foto.html
+++ b/miportfolio/foto.html
@@ -40,6 +40,7 @@
       <div class="slide"><img src="assets/images/_MG_0100.jpg" alt="Imagen 3 repetida"></div>
       <div class="slide"><img src="assets/images/_MG_0103.jpg" alt="Imagen 4 repetida"></div>
     </div>
+    </div>
 
     <section class="about">
       <div class="explicaciones">
