prueba bajar calidad de imagen

--- a/miportfolio/foto.html
+++ b/miportfolio/foto.html
@@ -29,7 +29,7 @@
   <div class="carousel">
     <div class="slides">
       <!-- Repetimos las imágenes para simular el bucle infinito -->
-      <div class="slide"><img src="assets/images/foto_anisa_1.jpg" alt="Imagen 1"></div>
+      <div class="slide"><img src="assets/images/foto_anisa_1_(2).jpg" alt="Imagen 1"></div>
       <div class="slide"><img src="assets/images/_MG_0094.jpg" alt="Imagen 2"></div>
       <div class="slide"><img src="assets/images/_MG_0100.jpg" alt="Imagen 3"></div>
       <div class="slide"><img src="assets/images/_MG_0103.jpg" alt="Imagen 4"></div>
