--- a/miportfolio/foto.html
+++ b/miportfolio/foto.html
@@ -30,15 +30,15 @@
     <div class="slides">
       <!-- Repetimos las imágenes para simular el bucle infinito -->
       <div class="slide"><img src="assets/images/foto_anisa_1_(2).jpg" alt="Imagen 1"></div>
-      <div class="slide"><img src="assets/images/_MG_0094.jpg" alt="Imagen 2"></div>
-      <div class="slide"><img src="assets/images/_MG_0100.jpg" alt="Imagen 3"></div>
-      <div class="slide"><img src="assets/images/_MG_0103.jpg" alt="Imagen 4"></div>
+      <div class="slide"><img src="assets/images/foto_anisa_2.jpg" alt="Imagen 2"></div>
+      <div class="slide"><img src="assets/images/foto_anisa_3.jpg" alt="Imagen 3"></div>
+      <div class="slide"><img src="assets/images/foto_anisa_4.jpg" alt="Imagen 4"></div>
 
       <!-- Duplicadas para la animación infinita -->
-      <div class="slide"><img src="assets/images/_MG_0040.jpg" alt="Imagen 1 repetida"></div>
-      <div class="slide"><img src="assets/images/_MG_0094.jpg" alt="Imagen 2 repetida"></div>
-      <div class="slide"><img src="assets/images/_MG_0100.jpg" alt="Imagen 3 repetida"></div>
-      <div class="slide"><img src="assets/images/_MG_0103.jpg" alt="Imagen 4 repetida"></div>
+      <div class="slide"><img src="assets/images/foto_anisa_1_(2).jpg" alt="Imagen 1 repetida"></div>
+      <div class="slide"><img src="assets/images/foto_anisa_2.jpg" alt="Imagen 2 repetida"></div>
+      <div class="slide"><img src="assets/images/foto_anisa_3.jpg" alt="Imagen 3 repetida"></div>
+      <div class="slide"><img src="assets/images/foto_anisa_4.jpg" alt="Imagen 4 repetida"></div>
     </div>
   </div>
 
